Product Landing Page update

--- a/Product_landing_page/index.html
+++ b/Product_landing_page/index.html
@@ -55,17 +55,19 @@
                 <h3>Decoratives</h3>
                 <img id="image" src="../Product_landing_page/images/decoration.png" alt="decoratives">
                 <p>Maecenas pretium metus tortor. Phasellus felis arcu, pretium vitae diam vitae, pulvinar gravida dolor. Donec commodo metus eget augue scelerisque, vitae auctor nisl tempus.</p>
+                <button id="buy" name="buy" value="decor">Buy Now</button>
             </div>
             <div id="box">
                 <h3>Metal & Stone</h3>
                 <img id="image" src="../Product_landing_page/images/metal art.jpg" alt="metal statue">
                 <p>Maecenas pretium metus tortor. Phasellus felis arcu, pretium vitae diam vi,Donec commodo metus eget augue scelerisque, vitae auctor nisl tempus.</p>
-                
+                <button id="buy" name="buy" value="metal">Buy Now</button>
             </div>
             <div id="box">
                 <h3>Clothings & Jewellery</h3>
                 <img id="image" src="../Product_landing_page/images/clothing.jpg" alt="Clothes">
                 <p>Suspendisse a sodales libero, sed auctor lacus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus</p>  
+                <button id="buy" name="buy" value="cloth">Buy Now</button>
             </div>
             </div>
         </section>
