Personal Portfolio Project

--- a/Personal_Portfolio/index.html
+++ b/Personal_Portfolio/index.html
@@ -2,46 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width">
     <title>Jivansha Gupta | Portfolio</title>
     <meta name="author" content="Jivansha">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <header id="navbar">
-            <nav>
-                <ul>
-                    <li> <a href="#welcome-section">ABOUT</a> </li>
-                    <li> <a href="#projects">WORK</a> </li>
-                    <li> <a href="#contact">CONTACT</a> </li>
-                </ul>
-            </nav>
-    </header>
-
     <section id="welcome-section">
+    <header id="navbar">
+        <nav id="navbar_sub">
+            <ul>
+                <li> <a href="#welcome-section">ABOUT</a> </li>
+                <li> <a href="#projects">WORK</a> </li>
+                <li> <a href="#contact">CONTACT</a> </li>
+            </ul>
+        </nav>
+    </header>
         <h1>Hey I'm Jivansha</h1>
-        <h3>a creator & a learner</h3>
+        <h2>a Creator & a Learner</h2>
     </section>
 
     <section id="projects">
         <h1>My Work</h1>
+        <div id="work">
         <section class="project-tile">
-            <a href="https://codepen.io/Jivansha_78/pen/BgYdGa"><img src=""></a>
+            <a href="https://codepen.io/Jivansha_78/pen/BgYdGa" target="_blank"><img src="images/product_landing_page.jpg"></a>
         </section>
         <section class="project-tile">
-            <a href="https://codepen.io/Jivansha_78/pen/mZpNzZ">Bakers & Co. Survey Form</a>
+            <a href="https://codepen.io/Jivansha_78/pen/mZpNzZ" target="_blank"><img src="images/survey_form.jpg"></a>
         </section>
         <section class="project-tile">
-            <a href="https://codepen.io/Jivansha_78/pen/GbGpOq">Python Documentation</a>
+            <a href="https://codepen.io/Jivansha_78/pen/GbGpOq" target="_blank"><img src="images/technical_documentation.jpg"></a>
         </section>
+        </div>
+        <a id="more" href="https://codepen.io/Jivansha_78/" target="_blank">View More</a>
     </section>
     
+    <footer>
     <section id="contact">
-        <h2>Contact Me</h2>
-        <a id="profile-link" href="https://www.freecodecamp.org/jivansha87"></a>
-        <a id="github-link" href="https://github.com/"></a>
-        <a id="gmail-link" href="www.google.com/gmail/"></a>
+        <h2>Contact me to Work</h2>
+        <ul>
+        <li><a id="profile-link" href="https://www.freecodecamp.org/jivansha87" target="_blank"><img src="../Personal_Portfolio/images/contact_logo/profile logo.jpg"></a></li>
+        <li><a id="github-link" href="https://github.com/" target="_blank"><img src="../Personal_Portfolio/images/contact_logo/github.jpg"></a></li>
+        <li><a id="gmail-link" href="www.google.com/gmail/" target="_blank"><img src="../Personal_Portfolio/images/contact_logo/email logo.jpg"></a></li>
+        </ul>
     </section>
+        <p>* This is not a real Portfolio. All the links and project works are for demo purpose only.</p>
+        Coded by &copy; Jivansha
+    </footer>
 </body>
 </html>
